--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -9,7 +9,7 @@
 }
 
 .heroSection {
-	margin-inline: calc(50% - 50vw);
+	margin-inline: calc(50% - 50dvw);
 	margin-top: 0;
 }
 
